# llm-playground

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  main_llm-student-assistant.yml
src/: main.py
src/function/: langchain_chat.py  token_utils.py
src/tests/: test_langchain_chat.py  test_token_utils.py
