[tool.poetry]
name = "py_llm"
version = "0.1.0"
description = ""
authors = ["im"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.237"
openai = "^0.27.8"
tiktoken = "^0.4.0"
streamlit = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
